# wtop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
src/: app.rs  clipboard.rs  config.rs  error.rs  glyphs.rs  main.rs  wt.rs
src/collectors/: cpu.rs  disk.rs  gpu.rs  inspect.rs  memory.rs  mod.rs  network.rs  process.rs  services.rs  thread.rs
src/input/: handler.rs
src/models/: cpu.rs  disk.rs  gpu.rs  inspect.rs  memory.rs  mod.rs  network.rs  npu.rs  process.rs  services.rs  thread.rs
src/ui/: cpu_panel.rs  disk_panel.rs  filter_bar.rs  gauge_bar.rs  gpu_panel.rs  help_overlay.rs  inspect_panel.rs  kill_confirm.rs  layout.rs  memory_panel.rs  mod.rs  name_search.rs  net_filter_panel.rs  network_panel.rs  pid_jump.rs  process_panel.rs  services_panel.rs  settings_panel.rs  theme.rs  theme_file.rs  wt_panel.rs
themes/: README.md  catppuccin_mocha.toml  cyberpunk.toml  dark.toml  dracula.toml  gruvbox.toml  light.toml  monokai.toml  nord.toml  one_dark.toml  solarized_dark.toml  tokyo_night.toml
