[package]
name = "wtop"
version = "0.1.0"
edition = "2021"
description = "A Windows terminal system monitor — htop for Windows"
license = "MIT"
repository = "https://github.com/NumbaWon/wtop"

[[bin]]
name = "wtop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
thiserror = "2"
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bytesize = "1"
chrono = "0.4"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_Ndis",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
